<resources>
    <string name="app_name">S&amp;SFood</string>
    <string name="register_name">Registration</string>

    <!-- Strings related to register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_birthdate">Birth Date DD/MM/YYYY</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="error_invalid_username">Username is empty</string>
    <string name="not_yet_registed">You need to register first</string>
    <string name="already_register">You have already one regist</string>
    <string name="wrong_pass">Wrong password</string>

    <string name="how_to_do_it_tittle_empty">You need to complete this one</string>

    <string name="need_photo">You need add one photo</string>


    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_submit">Submit</string>

    <!-- Strings related to my profile -->
    <string name="profile_name">My Profile</string>
    <string name="recipes">Recipes</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="recipe_tittle">Recipe Tittle</string>
    <string name="ingredients">Ingredients</string>
    <string name="step_by_step">Step By Step</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_movies">Add Movies</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="pub_recipe">Publish her</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_feed_book">Cook Book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1515349571814402</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="add_friend">Add Friend</string>
    <string name="follow">Follow</string>
    <string name="others_badges">Badges</string>
    <string name="radius_length">Radius Max(10km)</string>
    <string name="search">Search</string>
    <string name="search_people">Search People</string>
    <string name="go">Eat Now</string>
    <string name="save_receipe">Save Recipe</string>
    <string name="pub_receipe">Pub Now</string>


    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    
    
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>


    <string name="categories">Choose the food category</string>
    <string-array name="categories_arrays">
        <item>Choose the food category</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Seafood</item>
        <item>Vegan</item>
        <item>Drinks</item>
        <item>Cakes</item>
        <item>Snacks</item>
    </string-array>

    <string name="preparation_time">Preparation Time</string>
    <string-array name="preparation_time_arrays">
        <item>Preparation Time</item>
        <item> &lt; 5 min </item>
        <item> &lt; 10 min </item>
        <item> &lt; 20 min </item>
        <item> &lt; 30 min </item>
        <item> &gt; 30 min </item>
    </string-array>

    <string name="confection_time">Confection Time</string>
    <string-array name="confection_time_arrays">
        <item>Confection Time</item>
        <item> &lt; 10 min </item>
        <item> &lt; 20 min </item>
        <item> &lt; 30 min </item>
        <item> &lt; 45 min </item>
        <item> &lt; 60 min </item>
        <item> &gt; 60 min </item>
    </string-array>

    <string name="people_quantity">People Quantity</string>
    <string-array name="people_quantity_arrays">
        <item>People Quantity </item>
        <item> 1 (px)</item>
        <item> 2 (px)</item>
        <item> 3 (px)</item>
        <item> 4 (px)</item>
        <item> 5 (px)</item>
        <item> &gt; 5 (px)</item>
    </string-array>


    <string name="Radius">Radius</string>
    <string-array name="Radius_arrays">
        <item>Radius (Km)</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
    </string-array>



</resources>
