<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="86dp"
        android:layout_height="102dp"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/linearLayout">

        <TextView
        android:text="@string/recipes"
        android:layout_width="wrap_content"
        android:id="@+id/recipes"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp" />

        <TextView
        android:text="@string/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/followers"
        android:textAlignment="center"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"/>

        <TextView
        android:text="@string/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/following"
        android:textAlignment="center" />
    </LinearLayout>

    <TabHost
        android:layout_width="200dip"
        android:layout_height="300dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageView2">

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
            </FrameLayout>

        </LinearLayout>
    </TabHost>

</RelativeLayout>
