<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_visit_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shareandsearchfood.shareandsearchfood.Visit_person">

    <ImageView
        android:layout_width="86dp"
        android:layout_height="102dp"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



        <LinearLayout
            android:id="@+id/btnLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button3"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_friend"
                android:textStyle="bold"
                android:textSize="14sp" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/follow"
                android:textStyle="bold" />

        </LinearLayout>




    --martelada para aparecer os numeros das receitas, followers...
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textView2"
            android:hint="10"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="110dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textView3"
            android:hint="8"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="180dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textView4"
            android:hint="6"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="245dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textView5"
            android:hint="5"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="300dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
       >

        <TextView
            android:text="@string/recipes"
            android:layout_width="wrap_content"
            android:id="@+id/recipes"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:text="@string/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/followers"
            android:textAlignment="center"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:text="@string/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/following"
            android:textAlignment="center"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>


        <TextView
            android:text="@string/others_badges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/others_badges"
            android:textAlignment="center" />




    </LinearLayout>


    <LinearLayout
        android:id="@+id/Person_Pubs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/customborder1"
        android:layout_marginTop="110dp"
        android:weightSum="1">


        --ME tiago
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/titulo1"
                android:hint="Titulo"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:textSize="18sp" />


        </LinearLayout>

        --go on

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="195dp"
            android:src="@drawable/bolos"
            android:id="@+id/imageView4"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.47" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="2">

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RatingBar
                    android:id="@+id/ratingBar4"
                    android:layout_marginLeft="250dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:text="timestamp"
                    android:layout_width="wrap_content"
                    android:id="@+id/data2"
                    android:layout_marginLeft="25dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>


    </LinearLayout>


</RelativeLayout>
