<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shareandsearchfood.shareandsearchfood.MyProfile"
    android:id="@+id/fragment_share">

    <LinearLayout
        android:id="@+id/SHARE"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop= "-10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">


            <AutoCompleteTextView
                android:id="@+id/title_receita_share"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email"
                android:layout_marginTop="16dp"
                android:imeOptions="actionUnspecified"
                android:hint="Recipe Tittle"
                android:inputType="text"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layoutIngredientes99"
            >

            <AutoCompleteTextView
                android:id="@+id/ingredients"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:imeOptions="actionUnspecified"
                android:layout_alignParentTop="true"
                android:hint="@string/ingredients"
                android:inputType="textAutoComplete"
                />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutIngredientes"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/moreIngredients"
                    android:layout_weight="1"
                    android:button="@android:drawable/ic_input_add"
                    android:imeOptions="actionUnspecified"
                    android:onClick="addIngredients"
                    android:checked="false" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"               >
            <AutoCompleteTextView
                android:id="@+id/Step_by_Step"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:imeOptions="actionUnspecified"
                android:hint="@string/step_by_step"
                android:inputType="textAutoComplete"
                />
        </LinearLayout>
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutSteps"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/moreSteps"
                    android:layout_weight="1"
                    android:button="@android:drawable/ic_input_add"
                    android:imeOptions="actionUnspecified"
                    android:onClick="addSteps"
                    android:checked="false" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp">


            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="175dp"
                style="?android:textAppearanceSmall"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Receipt Photo"
                android:textStyle="bold"
                android:onClick="openGalleryShare"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/photoName"
                style="?android:textAppearanceSmall"
                android:layout_width="188dp"
                android:layout_height="69dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/button3"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_photos"
                android:textStyle="bold"
                android:textSize="14sp" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_movies"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_save_pub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/Save"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_receipe"
                android:textStyle="bold"
                android:textSize="14sp"
                android:onClick="safeReceipt"/>


            <Button
                android:id="@+id/Publish"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pub_receipe"
                android:textStyle="bold"
                android:onClick="pubReceipt"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
